--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -26,6 +26,7 @@
     "chai-spies": "^1.0.0",
     "eslint": "^6.1.0",
     "eslint-plugin-mocha": "^6.0.0",
+    "leetcode": "^2.0.0",
     "mocha": "^6.2.0"
   }
 }
