--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Katas",
+  "name": "katas",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require @babel/register"
+    "test": "mocha --require @babel/register",
+    "watch": "mocha --require @babel/register --watch"
   },
   "repository": {
     "type": "git",
