update code for permutations

--- a/Python/pytest.ini
+++ b/Python/pytest.ini
@@ -1,12 +1,12 @@
 [pytest]
 ; addopts = --cov=test --cov-report html --cov-report term --cov-fail-under=90
-addopts = -s -vvv -x
+addopts = -s -v -x --tb=short
 
 ;Run a single file
-; python_files = test/test_coin_change.py
+python_files = test/recursion/test_permutations.py
 
 ;Run a single test
-python_functions=test_basic_coin_change
+python_functions=test_permutations_basic
 
 ;When invoking via pytest-watch
 [pytest-watch]
