--- a/Python/pytest.ini
+++ b/Python/pytest.ini
@@ -1,12 +1,12 @@
 [pytest]
 ; addopts = --cov=test --cov-report html --cov-report term --cov-fail-under=90
-addopts = -s -v -x --tb=short
+addopts = -s -x --tb=short
 
 ;Run a single file
-python_files = test/recursion/test_permutations.py
+python_files = test/learn/**
 
 ;Run a single test
-python_functions=test_permutations_basic
+; python_functions=test_permutations_basic
 
 ;When invoking via pytest-watch
 [pytest-watch]
